# multithreaded_scraper

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  example_fail.csv  example_in.txt  example_out.csv  fail.csv  in.txt  main.cpp  main.py  out.csv  run.sh  utils.hpp  utils.py
C/: CMakeCache.txt  CMakeLists.txt  HTMLParser.cpp  HTMLParser.hpp  Main 2  Main.cpp  Makefile  SafeQueue.hpp  Scrape.cpp  Utils.cpp  Utils.hpp  cmake_install.cmake  main.cpp  out.csv  out.txt  unused_m_file  utils.cpp  utils.hpp
src/: CMakeLists.txt  HTMLParser.cpp  HTMLParser.hpp  SafeQueue.hpp  Scrape.hpp  Utils.hpp
